--- a/_config.yml
+++ b/_config.yml
@@ -19,13 +19,20 @@ description: >- # this means to ignore newlines until "baseurl:"
   This is my blog for CSCI 340, This will tell everything about the class and stuff.
 baseurl: "/csci340blog" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: none
 github_username:  ZacharyANelson
 # Build settings
 markdown: kramdown
 theme: minima
 plugins:
   - jekyll-feed
+navigation:
+  - title: Home
+    url: /index.html
+  - title: About
+    url: /about
+  - title: Contact
+    url: /contact
+
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
